Fix horizontal scroll issue on mobile by changing 100vw to 100%

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body::before {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('../images/herringbone.png');
     background-repeat: repeat;
